syntax = "proto3";

package xmaslist;

message UserInfo {
  int32 id = 1;
  string username = 2;
  string fullname = 3;
  bool is_admin = 4;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string cookie = 2;
  int64 expiry = 3;  // in seconds
  UserInfo user_info = 4;
}

message LogoutRequest {
  string cookie = 1;
}

message LogoutResponse {}

service LoginService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
}
